# ece1387_a1

./: .gitignore  CMakeLists.txt  Makefile  README  circuit.cpp  circuit.h  data_init_test.cc  file_read_test.cc  main.cpp  switch_conn_test.cc  ui.cpp  ui.h  ui_tests.h  version.h
.github/workflows/: cmake-single-platform.yml
data/: 1con  cct1  cct1_dense  cct2  cct2_dense  cct3  cct3_dense  cct4  cct4_dense
